force-app/main/default/objects/Tenant__c/Tenant__c.object-meta.xml
<CustomObject>
    <description>For rental units, tenant report per propery</description>
    <label>Tenant</label>
    <nameField>
        <displayFormat>TN-{0}</displayFormat>
        <label>Tenant Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tenants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>