force-app/main/default/objects/Tenant__c/fields/AMI__c.field-meta.xml
<CustomField>
    <fullName>AMI__c</fullName>
    <formula>AnnualIncome__c / Poverty_Income_Level__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AMI %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>