force-app/main/default/objects/Tenant__c/fields/HOMEDesignation__c.field-meta.xml
<CustomField>
    <fullName>HOMEDesignation__c</fullName>
    <label>HOME Designation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>