force-app/main/default/objects/Tenant__c/fields/HouseholdSize__c.field-meta.xml
<CustomField>
    <fullName>HouseholdSize__c</fullName>
    <label>Household Size</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>