force-app/main/default/objects/Tenant__c/fields/Poverty_Income_Level__c.field-meta.xml
<CustomField>
    <fullName>Poverty_Income_Level__c</fullName>
    <formula>IF(
 HouseholdSize__c =1,$CustomMetadata.PovertyIncomeLevels__mdt.X2024_Poverty_income_levels.X1_Hhd_Member__c, 
IF(
 HouseholdSize__c =2,$CustomMetadata.PovertyIncomeLevels__mdt.X2024_Poverty_income_levels.X2_Hhd_Member__c, 
IF(
 HouseholdSize__c =3,$CustomMetadata.PovertyIncomeLevels__mdt.X2024_Poverty_income_levels.X3_Hhd_Member__c, 
IF(
 HouseholdSize__c =4,$CustomMetadata.PovertyIncomeLevels__mdt.X2024_Poverty_income_levels.X4_Hhd_Member__c, 
IF(
 HouseholdSize__c =5,$CustomMetadata.PovertyIncomeLevels__mdt.X2024_Poverty_income_levels.X5_Hhd_Member__c, 
IF(
 HouseholdSize__c =6,$CustomMetadata.PovertyIncomeLevels__mdt.X2024_Poverty_income_levels.X6_hhd_Member__c, 
IF(
 HouseholdSize__c =7,$CustomMetadata.PovertyIncomeLevels__mdt.X2024_Poverty_income_levels.X7_Hhd_Member__c, 
IF(
 HouseholdSize__c =8,$CustomMetadata.PovertyIncomeLevels__mdt.X2024_Poverty_income_levels.X8_Hhd_Member__c, 
0


) )))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Poverty Income Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>