force-app/main/default/objects/Tenant__c/fields/UnitAddress__c.field-meta.xml
<CustomField>
    <fullName>UnitAddress__c</fullName>
    <inlineHelpText>Unit number or address of property, upto 80 character</inlineHelpText>
    <label>Unit #/Address</label>
    <length>80</length>
    <type>Text</type>
</CustomField>